| Summary: | ASTERISK-20916: GoogleVoice calls don't connect, but continue ringing despite call having been answered | ||||||
| Reporter: | kuj (kuj) | Labels: | |||||
| Date Opened: | 2013-01-10 10:19:33.000-0600 | Date Closed: | 2013-01-11 17:05:47.000-0600 | ||||
| Priority: | Major | Regression? | |||||
| Status: | Closed/Complete | Components: | Channels/chan_motif | ||||
| Versions: | 11.1.2 | Frequency of Occurrence | Frequent | ||||
| Related Issues: |
| ||||||
| Environment: | Attachments: | ( 0) xmpp.debug | |||||
| Description: | When using XMPP and chan_motif to make calls via GoogleVoice, at random times the call will not connect both parties. Instead, the caller will continue to hear ringing, despite the callee having picked up the call.
An asterisk restart may or may not fix this issue. This may be a chan_motif or resource/xmpp issue. | ||||||
| Comments: | By: kuj (kuj) 2013-01-10 10:20:36.526-0600 Sanitized XMPP debug from when bug occurred By: Joshua C. Colp (jcolp) 2013-01-10 10:58:28.252-0600 I believe I've figured out what is going on here and hope to have a fix in the next few days. By: Chirag Chhatriwala (cchhat01) 2013-02-06 18:46:29.059-0600 Joshua, It says the issue was fixed for a target release of 11.3.0. So, if I checked out trunk asterisk 11.x, will I be able to test this fix? Or is this yet to be checked in ? Thanks Chirag PS: I ended up duplicating this issue and its already been linked. Sorry for the duplication. I realized only after I created my JIRA work-item (ASTERISK 21043). Mea-Culpa. By: Joshua C. Colp (jcolp) 2013-02-06 18:49:15.639-0600 If you look at the "Subversion" tab you can see exactly what revisions and when it went in ^_^ if you check out Asterisk 11 from SVN the fix is there. By: Chirag Chhatriwala (cchhat01) 2013-02-06 18:50:18.630-0600 Joshua Colp = Awesome!!! | ||||||